# jaateloauto

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_pipeline.py
01_fetch/: README.md  fetch_trains.py
02_staging/: schema.md
03_bronze/: bronze.py
04_silver/: silver.py
05_gold/: README.md
06_transform/: README.md  dbt_project.yml  profiles.yml
06_transform/models/: schema.yml  sources.yml
06_transform/models/gold/: gold_daily_punctuality.sql  gold_station_punctuality.sql
06_transform/models/silver/: dim_date.sql  dim_stations.sql  dim_trains.sql  fact_train_stops.sql
07_visualisation/: analysis.ipynb  app.py
docs/: demo_script.md  jatkokehitys.md
tests/: conftest.py  test_bronze.py  test_fetch.py
