[project]
name = "vr-data-platform"
version = "0.1.0"
description = "VR Rautatieliikenne -tietoalusta: dataputki API:sta visualisointiin"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "dbt-duckdb>=1.7.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipywidgets>=8.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = [".", "01_fetch", "03_bronze", "04_silver"]

[tool.ruff]
line-length = 88
target-version = "py311"
